--- a/TemplateApp/TemplateApp/Info.plist
+++ b/TemplateApp/TemplateApp/Info.plist
@@ -16,6 +16,17 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>0.1.0</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.learnandbecurious.template</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>templateapp</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
