feat: persist user profiles and refresh ui

--- a/TemplateApp/TemplateApp/Config/app.json
+++ b/TemplateApp/TemplateApp/Config/app.json
@@ -12,7 +12,7 @@
     "feedback": false
   },
   "apiBase": {
-    "staging": "https://staging.api.example.com",
+    "staging": "https://emjv5xdzc3.execute-api.us-west-2.amazonaws.com",
     "prod": "https://api.example.com"
   },
   "auth": {
