Point staging template to auth-staging domain

--- a/TemplateApp/TemplateApp/Config/app.json
+++ b/TemplateApp/TemplateApp/Config/app.json
@@ -19,7 +19,7 @@
     "cognitoClientId": "5l0ibjffqpburhckouas7r234d",
     "scheme": "templateapp",
     "region": "us-west-2",
-    "hostedUIDomain": "learnandbecurious-staging.auth.us-west-2.amazoncognito.com"
+    "hostedUIDomain": "auth-staging.learnandbecurious.com"
   },
   "activeEnvironment": "staging"
 }
