Wire legal links to hosted policies

--- a/TemplateApp/TemplateApp/Config/app.json
+++ b/TemplateApp/TemplateApp/Config/app.json
@@ -21,5 +21,9 @@
     "region": "us-west-2",
     "hostedUIDomain": "auth-staging.learnandbecurious.com"
   },
+  "legal": {
+    "privacyUrl": "https://learnandbecurious.com/privacy.html",
+    "termsUrl": "https://learnandbecurious.com/terms.html"
+  },
   "activeEnvironment": "staging"
 }
