--- a/TemplateApp/TemplateApp/Info.plist
+++ b/TemplateApp/TemplateApp/Info.plist
@@ -4,16 +4,18 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>Visa Photo Maker</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBundleIconName</key>
+	<string>AppIcon</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>TemplateApp</string>
-	<key>CFBundleIconName</key>
-	<string>AppIcon</string>
+	<string>Visa Photo Maker</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -22,10 +24,10 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>com.learnandbecurious.template</string>
+			<string>com.learnandbecurious.visapassportphoto</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>templateapp</string>
+				<string>visaphotomaker</string>
 			</array>
 		</dict>
 	</array>
@@ -33,6 +35,12 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Visa Photo Maker uses the camera to capture passport and visa photos.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Visa Photo Maker saves your passport and visa photos to your library.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Visa Photo Maker needs photo library access to import and save passport and visa photos.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
