Apply prod manifest for Visa Photo Maker

--- a/TemplateApp/TemplateApp/Config/app.json
+++ b/TemplateApp/TemplateApp/Config/app.json
@@ -16,10 +16,10 @@
     "prod": "https://fhdsv5jl7h.execute-api.us-west-2.amazonaws.com"
   },
   "auth": {
-    "cognitoClientId": "6a8ffrki3fsq0arqp03pv2dnjm",
+    "cognitoClientId": "6015im7debva15kg0ib0pociju",
     "scheme": "visaphotomaker",
     "region": "us-west-2",
-    "hostedUIDomain": "auth-staging.learnandbecurious.com"
+    "hostedUIDomain": "auth.learnandbecurious.com"
   },
   "build": {
     "marketingVersion": "1.0.0",
@@ -29,5 +29,5 @@
     "privacyUrl": "https://learnandbecurious.com/privacy.html",
     "termsUrl": "https://learnandbecurious.com/terms.html"
   },
-  "activeEnvironment": "staging"
+  "activeEnvironment": "prod"
 }
