Update display name to Visa Photo

--- a/TemplateApp/TemplateApp/Config/app.json
+++ b/TemplateApp/TemplateApp/Config/app.json
@@ -1,6 +1,6 @@
 {
   "appId": "com.learnandbecurious.visapassportphoto",
-  "displayName": "Visa Photo Maker",
+  "displayName": "Visa Photo",
   "bundleIdSuffix": "visapassportphoto",
   "theme": {
     "primary": "#111111",
