Use latest available iOS simulator in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,5 +29,5 @@ jobs:
           xcodebuild \
             -project TemplateApp.xcodeproj \
             -scheme TemplateApp \
-            -destination 'platform=iOS Simulator,OS=latest,name=iPhone 16' \
+            -destination 'platform=iOS Simulator,OS=latest' \
             clean test
