--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,40 @@ jobs:
           BUILD_NUMBER=${{ github.run_number }}
           xcrun agvtool new-version -all "$BUILD_NUMBER"
 
+      - name: Select available iOS simulator
+        run: |
+          set -euo pipefail
+          SIM_JSON=$(xcrun simctl list devices available -j)
+          CANDIDATES=(
+            "iPhone 16 Pro Max"
+            "iPhone 16 Pro"
+            "iPhone 16"
+            "iPhone 15 Pro Max"
+            "iPhone 15 Pro"
+            "iPhone 15"
+          )
+          for NAME in "${CANDIDATES[@]}"; do
+            UDID=$(jq -r --arg name "$NAME" '
+              .devices
+              | to_entries[]
+              | .value[]
+              | select(.name == $name and .isAvailable == true)
+              | .udid' <<<"$SIM_JSON" | head -n 1 || true)
+            if [[ -n "$UDID" ]]; then
+              echo "Using simulator: $NAME ($UDID)"
+              echo "SIMULATOR_NAME=$NAME" >> "$GITHUB_ENV"
+              echo "SIMULATOR_UDID=$UDID" >> "$GITHUB_ENV"
+              exit 0
+            fi
+          done
+          echo "No matching simulator found." >&2
+          exit 1
+
       - name: Run unit tests on simulator
         run: |
           set -o pipefail
           xcodebuild \
             -project TemplateApp.xcodeproj \
             -scheme TemplateApp \
-            -destination 'platform=iOS Simulator,OS=latest' \
+            -destination "platform=iOS Simulator,id=${SIMULATOR_UDID}" \
             clean test
