--- a/TemplateApp/TemplateApp/Info.plist
+++ b/TemplateApp/TemplateApp/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Visa Photo</string>
+	<string>Template App</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIconName</key>
@@ -15,7 +15,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Visa Photo</string>
+	<string>Template App</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -24,10 +24,10 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>com.learnandbecurious.visapassportphoto</string>
+			<string>com.learnandbecurious.sample</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>visaphotomaker</string>
+				<string>templateapp</string>
 			</array>
 		</dict>
 	</array>
