Set template config to prod auth

--- a/TemplateApp/TemplateApp/Config/app.json
+++ b/TemplateApp/TemplateApp/Config/app.json
@@ -18,10 +18,10 @@
     "prod": "https://fhdsv5jl7h.execute-api.us-west-2.amazonaws.com"
   },
   "auth": {
-    "cognitoClientId": "5l0ibjffqpburhckouas7r234d",
+    "cognitoClientId": "7j7sleur0f72tqc3qv6o0a0nia",
     "scheme": "templateapp",
     "region": "us-west-2",
-    "hostedUIDomain": "auth-staging.learnandbecurious.com"
+    "hostedUIDomain": "auth.learnandbecurious.com"
   },
   "legal": {
     "privacyUrl": "https://learnandbecurious.com/privacy.html",
@@ -33,5 +33,5 @@
     "icon": "square.and.arrow.up"
   },
   "push": {},
-  "activeEnvironment": "staging"
+  "activeEnvironment": "prod"
 }
