Align template bundle ID with App Store profile

--- a/TemplateApp/TemplateApp/Config/app.json
+++ b/TemplateApp/TemplateApp/Config/app.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.learnandbecurious.sample",
+  "appId": "com.learnandbecurious.template",
   "displayName": "Template App",
   "bundleIdSuffix": "template",
   "theme": {
