Add feature-flagged error banner/toast with test button

--- a/TemplateApp/TemplateApp/Config/app.json
+++ b/TemplateApp/TemplateApp/Config/app.json
@@ -14,7 +14,8 @@
     "share": true,
     "pushDeepLink": false,
     "imageCapture": false,
-    "loadingOverlay": true
+    "loadingOverlay": true,
+    "errorBanner": true
   },
   "apiBase": {
     "staging": "https://emjv5xdzc3.execute-api.us-west-2.amazonaws.com",
