--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -105,10 +105,21 @@ jobs:
       - name: Show applied manifest
         run: cat TemplateApp/TemplateApp/Config/app.json
 
-      - name: Set up Xcode
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: ${{ inputs.xcode_version }}
+      - name: Set up Xcode (prefer requested, fallback to latest)
+        run: |
+          set -euo pipefail
+          echo "Attempting Xcode ${{ inputs.xcode_version }}..."
+          if ! sudo xcode-select -s "/Applications/Xcode_${{ inputs.xcode_version }}.app/Contents/Developer"; then
+            echo "Xcode ${{ inputs.xcode_version }} not found; falling back to latest."
+            /bin/ls -1 /Applications | grep -E '^Xcode_.*\\.app$' || true
+            LATEST_XCODE="$(/bin/ls -1 /Applications | grep -E '^Xcode_.*\\.app$' | sort -V | tail -n 1 || true)"
+            if [[ -n "$LATEST_XCODE" ]]; then
+              sudo xcode-select -s "/Applications/${LATEST_XCODE}/Contents/Developer"
+            else
+              echo "No Xcode_*.app found; using system default."
+              sudo xcode-select -s "/Applications/Xcode.app/Contents/Developer"
+            fi
+          fi
 
       - name: Show Xcode version
         run: xcodebuild -version
