--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -153,6 +153,7 @@ jobs:
           iPhone 15
           EOF
           SELECTED_UDID=""
+          SELECTED_RUNTIME=""
           for NAME in "${CANDIDATES[@]}"; do
             UDID=$(jq -r --arg name "$NAME" '
               .devices
@@ -162,7 +163,15 @@ jobs:
               | .udid' <<<"$SIM_JSON" | head -n 1 || true)
             if [[ -n "$UDID" ]]; then
               echo "Using simulator: $NAME ($UDID)"
+              SELECTED_RUNTIME=$(jq -r --arg name "$NAME" '
+                .devices
+                | to_entries[]
+                | . as $runtime
+                | $runtime.value[]
+                | select(.name == $name and .isAvailable == true)
+                | $runtime.key' <<<"$SIM_JSON" | head -n 1 || true)
               echo "SIMULATOR_NAME=$NAME" >> "$GITHUB_ENV"
+              echo "SIMULATOR_RUNTIME=$SELECTED_RUNTIME" >> "$GITHUB_ENV"
               SELECTED_UDID="$UDID"
               break
             fi
@@ -171,6 +180,15 @@ jobs:
             echo "No matching simulator found." >&2
             exit 1
           fi
+          if [[ -z "$SELECTED_RUNTIME" ]]; then
+            echo "No runtime found for selected simulator." >&2
+            exit 1
+          fi
+          OS_VERSION=$(sed -E 's/^com\\.apple\\.CoreSimulator\\.SimRuntime\\.iOS-([0-9]+)-([0-9]+)$/\\1.\\2/' <<<"$SELECTED_RUNTIME")
+          if [[ "$OS_VERSION" == "$SELECTED_RUNTIME" ]]; then
+            OS_VERSION=$(sed -E 's/^com\\.apple\\.CoreSimulator\\.SimRuntime\\.iOS-([0-9]+)$/\\1/' <<<"$SELECTED_RUNTIME")
+          fi
+          echo "SIMULATOR_OS=$OS_VERSION" >> "$GITHUB_ENV"
 
       - name: Run unit tests
         if: inputs.run_tests == true
@@ -179,7 +197,7 @@ jobs:
           xcodebuild \
             -project "$XCODE_PROJECT" \
             -scheme "${{ inputs.scheme }}" \
-            -destination "platform=iOS Simulator,name=${SIMULATOR_NAME},OS=latest" \
+            -destination "platform=iOS Simulator,name=${SIMULATOR_NAME},OS=${SIMULATOR_OS}" \
             clean test
 
       - name: Import signing certificate
