--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -141,6 +141,10 @@ jobs:
         run: |
           set -euo pipefail
           SIM_JSON=$(xcrun simctl list devices available -j)
+          echo "Available runtimes:"
+          jq -r '.devices | keys[]' <<<"$SIM_JSON" | sort -V || true
+          echo "Available devices:"
+          jq -r '.devices | to_entries[] | .key as $k | .value[] | select(.isAvailable == true) | "\($k) \(.name) \(.udid)"' <<<"$SIM_JSON" || true
           RUNTIME_KEYS=$(jq -r '.devices | keys[]' <<<"$SIM_JSON" | grep -E '^com\.apple\.CoreSimulator\.SimRuntime\.iOS-' || true)
           if [[ -z "$RUNTIME_KEYS" ]]; then
             echo "No iOS simulator runtimes found; skipping tests."
