--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -49,7 +49,7 @@ on:
         description: Requires perform_signing + App Store Connect API secrets
       xcode_version:
         required: false
-        default: "latest"
+        default: "26.0"
         type: string
         description: Xcode version to use for builds (e.g., 26.0)
     secrets:
@@ -105,55 +105,13 @@ jobs:
       - name: Show applied manifest
         run: cat TemplateApp/TemplateApp/Config/app.json
 
-      - name: Set up Xcode (prefer requested, fallback to latest with iOS SDK)
-        run: |
-          set -euo pipefail
-          REQUESTED_VERSION="${{ inputs.xcode_version }}"
-          if [[ "$REQUESTED_VERSION" != "latest" ]]; then
-            REQUESTED="/Applications/Xcode_${REQUESTED_VERSION}.app/Contents/Developer"
-            if [[ -d "$REQUESTED" ]]; then
-              sudo xcode-select -s "$REQUESTED"
-            fi
-          fi
-          if ! xcodebuild -showsdks | grep -q "iphoneos"; then
-            echo "Requested Xcode lacks iOS SDK; selecting highest Xcode with iOS SDK."
-            SELECTED=""
-            while IFS= read -r APP; do
-              DEV="/Applications/${APP}/Contents/Developer"
-              if [[ -d "$DEV" ]]; then
-                sudo xcode-select -s "$DEV"
-                if xcodebuild -showsdks | grep -q "iphoneos"; then
-                  SELECTED="$APP"
-                  break
-                fi
-              fi
-            done < <(/bin/ls -1 /Applications | grep -E '^Xcode_.*\\.app$' | sort -Vr)
-            if [[ -z "$SELECTED" ]]; then
-              echo "No Xcode with iOS SDK found; using system default."
-              sudo xcode-select -s "/Applications/Xcode.app/Contents/Developer"
-            else
-              echo "Selected Xcode app: $SELECTED"
-            fi
-          else
-            echo "Selected Xcode app: $(xcodebuild -version | head -n 1)"
-          fi
+      - name: Set up Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: ${{ inputs.xcode_version }}
 
       - name: Show Xcode version
         run: xcodebuild -version
-
-      - name: Install iOS simulator runtime (optional)
-        if: env.INSTALL_SIM_RUNTIME == 'true'
-        env:
-          XCODE_INSTALL_USER: ${{ secrets.XCODE_INSTALL_USER }}
-          XCODE_INSTALL_PASSWORD: ${{ secrets.XCODE_INSTALL_PASSWORD }}
-        run: |
-          set -euo pipefail
-          if [[ -z "${XCODE_INSTALL_USER:-}" || -z "${XCODE_INSTALL_PASSWORD:-}" ]]; then
-            echo "XCODE_INSTALL_USER / XCODE_INSTALL_PASSWORD not set; cannot install simulator runtime." >&2
-            exit 1
-          fi
-          sudo gem install xcode-install
-          xcversion simulators --install="iOS 26.2"
 
       - name: Set build number
         run: |
@@ -172,57 +130,42 @@ jobs:
         run: |
           set -euo pipefail
           SIM_JSON=$(xcrun simctl list devices available -j)
-          echo "Available runtimes:"
-          jq -r '.devices | keys[]' <<<"$SIM_JSON" | sort -V || true
-          echo "Available devices:"
-          jq -r '.devices | to_entries[] | .key as $k | .value[] | select(.isAvailable == true) | "\($k) \(.name) \(.udid)"' <<<"$SIM_JSON" || true
-          RUNTIME_KEYS=$(jq -r '.devices | keys[]' <<<"$SIM_JSON" | grep -E '^com\.apple\.CoreSimulator\.SimRuntime\.iOS-' || true)
-          if [[ -z "$RUNTIME_KEYS" ]]; then
-            echo "No iOS simulator runtimes found; skipping tests."
-            echo "SKIP_TESTS=true" >> "$GITHUB_ENV"
-            exit 0
-          fi
-          LATEST_RUNTIME=$(printf '%s\n' "$RUNTIME_KEYS" | sed -E 's/^com\.apple\.CoreSimulator\.SimRuntime\.//' | sort -V | tail -n 1)
-          if [[ -z "$LATEST_RUNTIME" ]]; then
-            echo "Unable to determine latest iOS simulator runtime." >&2
-            exit 1
-          fi
-          SELECTED_RUNTIME="com.apple.CoreSimulator.SimRuntime.${LATEST_RUNTIME}"
-          OS_VERSION=$(sed -E 's/^iOS-//' <<<"$LATEST_RUNTIME" | tr '-' '.')
-          if [[ -z "$OS_VERSION" ]]; then
-            echo "Unable to determine simulator OS version." >&2
-            exit 1
-          fi
+          CANDIDATES=()
+          while IFS= read -r line; do
+            CANDIDATES+=("$line")
+          done <<'EOF'
+          iPhone 16 Pro Max
+          iPhone 16 Pro
+          iPhone 16
+          iPhone 15 Pro Max
+          iPhone 15 Pro
+          iPhone 15
+          EOF
           SELECTED_UDID=""
-          NAME=$(jq -r '
-            .devices
-            | to_entries[]
-            | select(.key == "'"$SELECTED_RUNTIME"'")
-            | .value[]
-            | select(.isAvailable == true)
-            | .name' <<<"$SIM_JSON" | head -n 1 || true)
-          UDID=$(jq -r '
-            .devices
-            | to_entries[]
-            | select(.key == "'"$SELECTED_RUNTIME"'")
-            | .value[]
-            | select(.isAvailable == true)
-            | .udid' <<<"$SIM_JSON" | head -n 1 || true)
-          SELECTED_UDID="$UDID"
+          for NAME in "${CANDIDATES[@]}"; do
+            UDID=$(jq -r --arg name "$NAME" '
+              .devices
+              | to_entries[]
+              | .value[]
+              | select(.name == $name and .isAvailable == true)
+              | .udid' <<<"$SIM_JSON" | head -n 1 || true)
+            if [[ -n "$UDID" ]]; then
+              echo "Using simulator: $NAME ($UDID)"
+              {
+                echo "SIMULATOR_NAME=$NAME"
+                echo "SIMULATOR_UDID=$UDID"
+              } >> "$GITHUB_ENV"
+              SELECTED_UDID="$UDID"
+              break
+            fi
+          done
           if [[ -z "$SELECTED_UDID" ]]; then
-            echo "No matching simulator found for runtime ${SELECTED_RUNTIME}." >&2
+            echo "No matching simulator found." >&2
             exit 1
           fi
-          echo "Using simulator: $NAME ($UDID)"
-          echo "SIMULATOR_NAME=$NAME" >> "$GITHUB_ENV"
-          echo "SIMULATOR_RUNTIME=$SELECTED_RUNTIME" >> "$GITHUB_ENV"
-          SELECTED_UDID="$UDID"
-          echo "SIMULATOR_UDID=$SELECTED_UDID" >> "$GITHUB_ENV"
-          echo "SIMULATOR_OS=$OS_VERSION" >> "$GITHUB_ENV"
-          echo "SKIP_TESTS=false" >> "$GITHUB_ENV"
 
       - name: Run unit tests
-        if: inputs.run_tests == true && env.SKIP_TESTS != 'true'
+        if: inputs.run_tests == true
         run: |
           set -o pipefail
           xcodebuild \
